--- a/WebApplication1/Views/Home/Result.cshtml
+++ b/WebApplication1/Views/Home/Result.cshtml
@@ -1,5 +1,39 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model 
+<DOCTYPE html>
+    <html>
+    <head>
+        <title>Results</title>
+        <link href="~/StyleSheet.css" rel="stylesheet" />
+        
+    </head>
+    <body>
+        <h1>Results</h1>
+        <table>
+            <tr>
+                <th>Year</th>
+                <th>Honor</th>
+                <th>Name</th>
+                <th>Country</th>
+                <th>BirthYear</th>
+                <th>DeathYear</th>
+                <th>Title</th>
+                <th>Category</th>
+                <th>Context</th>
+            </tr>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.Year</td>
+                    <td>@item.Honor</td>
+                    <td>@item.Name</td>
+                    <td>@item.Country</td>
+                    <td>@item.BirthYear</td>
+                    <td>@item.DeathYear</td>
+                    <td>@item.Title</td>
+                    <td>@item.Category</td>
+                    <td>@item.Context</td>
+                </tr>
+            }
+        </table>
+    </body>
+</html>
