--- a/WebApplication1/Views/Home/Result.cshtml
+++ b/WebApplication1/Views/Home/Result.cshtml
@@ -1,10 +1,10 @@
-﻿@model 
+﻿@model List<WebApplication1.Models.Personoftheyear>
 <DOCTYPE html>
     <html>
     <head>
         <title>Results</title>
         <link href="~/StyleSheet.css" rel="stylesheet" />
-        
+
     </head>
     <body>
         <h1>Results</h1>
